--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "typescript": "^5.8.2"
   }
